# stockbot

./: .buildinfo  .gitignore  Dockerfile  README.md  genindex.html  index.html  makefile  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  stockbot.analysis.html  stockbot.api.html  stockbot.api.sinotrade.html  stockbot.api.yahoo.html  stockbot.constant.html  stockbot.html  stockbot.investor.analysis.html  stockbot.investor.html  stockbot.investor.model.html  stockbot.model.html  stockbot.screener.html  stockbot.ticker.html  stockbot.ticker.sinotrade.html  stockbot.ticker.yahoo.html  stockbot.visualization.html
.aws/: requirements.txt
.aws/stack/: README.md  package.json
.github/workflows/: build.yml  cicd.yml  doc.yml  test.yml
_modules/: index.html
_modules/stockbot/: core.html
_sources/: index.rst.txt  stockbot.api.rst.txt  stockbot.api.sinotrade.rst.txt  stockbot.investor.analysis.rst.txt  stockbot.investor.model.rst.txt  stockbot.investor.rst.txt  stockbot.model.rst.txt  stockbot.screener.rst.txt  stockbot.ticker.sinotrade.rst.txt  stockbot.ticker.yahoo.rst.txt  stockbot.visualization.rst.txt
cdkstack/: cdk.json
cdkstack/test/: cdkstack.test.ts
docs/source/: conf.py  index.rst  modules.rst  stockbot.analysis.rst  stockbot.api.rst  stockbot.api.yahoo.rst  stockbot.constant.rst  stockbot.rst  stockbot.ticker.rst
experiments/: dev.ipynb
stockbot/: constant.py  core.py
stockbot/analysis/: technical_indicator.py
test/: test_bayesian_optimizer.py
tests/: test_core.py
(+65 files in other folders)
