[tool.poetry]
name = "stockbot"
version = "0.1.0"
description = ""
authors = ["taolin <tanlin2013@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.0"
shioaji = "^0.3.6.dev3"
FinMind = "^1.5.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"
pylint = "^2.13.7"
flake8 = "^4.0.1"
mypy = "^0.942"
pre-commit = "^2.19.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^4.5.0"
sphinx-book-theme = "^0.3.2"
m2r2 = "^0.3.2"
pandoc = "2.1"
nbsphinx = "^0.8.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
